--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
-language: ruby
-rvm:
-    - 1.9.3
+language: python
+
+python:
+    - "2.6"
+    - "2.7"
+    - "3.3"
+
+install:
+    - pip install -r requirements.txt
+
+script: python tests.py
