--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-*.pyc
+/target
+/classes
+/checkouts
+/logs
+pom.xml
+pom.xml.asc
+*.jar
+*.class
+/.lein-*
+/.nrepl*
 .DS_Store
-env
-venv
 *.db
 *.log
-*nrepl*
-.lein-*
-target
 tmp
