old nix changes

--- a/api/Makefile
+++ b/api/Makefile
@@ -5,8 +5,8 @@ build:
 	cabal build
 
 nix:
-	cabal2nix --shell ./ > default.nix
+	cabal2nix aristotl.cabal --sha256=0 --shell > shell.nix
 
 # Only needs to be run after changing aristotl.cabal
-configure: default.nix
-	nix-shell -I ./ --command 'cabal configure'
+configure: shell.nix
+	nix-shell --command 'cabal configure'
