--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,2 @@
-/target
-/classes
-/checkouts
-/logs
-pom.xml
-pom.xml.asc
-*.jar
-*.class
-/.lein-*
-/.nrepl*
-.DS_Store
-*.db
-*.log
 tmp
-.cabal-sandbox
-dist/
+setenv.sh
